portfolio/db.tf
data "aws_availability_zones" "available" {}

module "vpc" {
  source               = "terraform-aws-modules/vpc/aws"
  version              = "2.77.0"
  name                 = "shop-be"
  cidr                 = "10.0.0.0/16"
  azs                  = data.aws_availability_zones.available.names
  public_subnets       = ["10.0.4.0/24", "10.0.5.0/24", "10.0.6.0/24"]
  enable_dns_hostnames = true
  enable_dns_support   = true
}

resource "aws_db_subnet_group" "shop-be" {
  name       = "shop-be"
  subnet_ids = module.vpc.public_subnets
  tags = {
    Name = "shop-be"
  }
}

resource "aws_security_group" "rds" {
  name   = "shop-be_rds"
  vpc_id = module.vpc.vpc_id

  ingress {
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "shop-be_rds"
  }
}

resource "aws_db_parameter_group" "shop-be" {
  name   = "shop-be"
  family = "postgres14"

  parameter {
    name  = "log_connections"
    value = "1"
  }
}

resource "aws_db_instance" "shop-be" {
  identifier             = "shop-be"
  instance_class         = "db.t3.micro"
  allocated_storage      = 5
  engine                 = "postgres"
  engine_version         = "14.1"
  username               = "edu"
  password               = var.db_password
  db_subnet_group_name   = aws_db_subnet_group.shop-be.name
  vpc_security_group_ids = [aws_security_group.rds.id]
  parameter_group_name   = aws_db_parameter_group.shop-be.name
  publicly_accessible    = true
  skip_final_snapshot    = true
}

## Parameters
resource "aws_ssm_parameter" "db_pw" {
  name        = "/development/database/password"
  description = "The parameter description"
  type        = "SecureString"
  value       = aws_db_instance.shop-be.password
  tags = {
    environment = "development"
  }
}
resource "aws_ssm_parameter" "db_user" {
  name        = "/development/database/user"
  description = "Dev DB username"
  type        = "SecureString"
  value       = aws_db_instance.shop-be.username
  tags = {
    environment = "development"
  }
}
resource "aws_ssm_parameter" "db_hostname" {
  name        = "/development/database/hostname"
  description = "Dev DB hostname"
  type        = "SecureString"
  value       = aws_db_instance.shop-be.address
  tags = {
    environment = "development"
  }
}
resource "aws_ssm_parameter" "db_port" {
  name        = "/development/database/port"
  description = "Dev DB port"
  type        = "SecureString"
  value       = aws_db_instance.shop-be.port
  tags = {
    environment = "development"
  }
}
